--- a/_includes/welcome-video.html
+++ b/_includes/welcome-video.html
@@ -10,7 +10,7 @@
 								<h3 class="fw600"><a href="{{ post.link }}">{{ post.subtitle }}</a></h3>
 								<p>{{ post.content }}</p>
 							</div>
-							<div class="section-news-button float-right">
+							<div class="section-news-button float-right mb-10">
 								<a class="btn-sixsq color-2" href="{{ post.link }}"><i class="far fa-plus-square"></i>  Watch</a>
 								<a class="btn-sixsq all" href="/media/videos"><i class="far fa-plus-square"></i>  All videos</a>
 							</div>
