--- a/_layouts/nuvlabox-spec.html
+++ b/_layouts/nuvlabox-spec.html
@@ -60,8 +60,8 @@
       				<h2 class="pb-10 fw700">Read the technical specification</h2>
       			</div>
       		</div>
-          <div id="nuvlabox-product-description" class="col-md-12 text-center">
-            <p>NuvlaBox is smart cloud-in-a-box appliance which offers easy and affordable access to cloud computing. It comes in two versions, standard and mini, both of which and can be customised with your own branding. The operating system is CentOS, OpenNebula provides the cloud layer and SlipStream is the PaaS. If you want to read more about the software and hardware specifications, take a look at the product description.  </p>
+          <div id="nuvlabox-product-description" class="col-md-12 text-center mb-20">
+            <h4 style="line-height: 1.5em">{{ page.content }}</h4>
           </div>
           <div class="col-md-12 mb-50 text-center">
             <img style="max-height: 280px;" src="/img/content/product_descriptions/nuvlabox_product_description_screen_shot.png" alt="nuvlabox_product_description"/>
