--- a/_includes/highlighted-with-image-full-width-item.html
+++ b/_includes/highlighted-with-image-full-width-item.html
@@ -1,5 +1,5 @@
 			<div>
-				<div class="solution-section solution-{{ post.product }}-{{ post.class }}">
+				<div class="solution-section solution-{{ post.product }}-{{ post.cssclass }}">
   				<div class="container">
   					<div class="row content">
 	 						<div class="col-md-12 col-sm-12">
