--- a/_includes/welcome-quotes-item.html
+++ b/_includes/welcome-quotes-item.html
@@ -5,7 +5,8 @@
 		</div>
 		<div class="col-lg-12 col-md-12 col-sm-12 mt-20">
       <h1><i class="fas fa-quote-left mb-20"></i></h1>
-      <h3 class="mb-50">{{ post.content }}</h3>
+      <h3>{{ post.content }}</h3>
+      <p class="mb-50">{{ post.author }}</p>
 		</div>
 	</div>
 </div>
