--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -74,7 +74,7 @@
   		</section>
   		<section class="section-full section-news pb-50 bg-grey-f9 relative">
   			<div class="container">
-  				<div class="row">
+  				<div class="row mb-20">
   					<div class="col-lg-6 col-md-6 col-sm-12">
   						<div class="section-title text-center">
   							<h2 class="pb-10 fw700">What people say about us.</h2>
