Update welcome page what's coming up

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -249,15 +249,15 @@
                 <div class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <h2>What's coming up?</h2>
-                    <h2>Open House on Open innovation for IOT and Sustainability</h2>
+                    <h2>How to Map a Billion Stars</h2>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/Hewlett_Packard_Enterprise_logo.png" alt="news"/></center>
+                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/blogs/milky_way.jpg" alt="news"/></center>
                   </div>
                 </div>
                 <div>
-                  <p>Join SixSq at the HPE Customer Centre for discussions and demonstrations of innovative IoT solutions. Plus a tour of this great centre of innovation. Registration is free.<center>
-                            <a class="btn btn-primary btn-lg" role="button" href="https://www.eventbrite.fr/e/billets-portes-ouvertes-au-centre-clients-hpe-innovation-ouverte-dans-liot-et-la-transition-ecologique-44630337541?utm_term=eventurl_text">Sign up here &raquo;</a>
+                  <p>Follow the second data release of ESA's Gaia mission to find out how big data analysis is changing the way we see our galaxy.<center>
+                            <a class="btn btn-primary btn-lg" role="button" href="http://media.sixsq.com/blog/how-to-map-a-billion-stars">Find out more &raquo;</a>
                         </center>
                       <center> <a /></a> </p>
                 </div>
