--- a/_layouts/nuvlabox-spec.html
+++ b/_layouts/nuvlabox-spec.html
@@ -18,7 +18,7 @@
       				<h2 class="pb-10 fw700">For industrial applications with partner:</h2>
       			</div>
       			<div class="col-md-12 text-center mt-20">
-              <img src="/img/content/Hewlett_Packard_Enterprise_logo.png" alt="hpe logo" width="70%">
+              <img src="/img/logo/logo_hpe.png" alt="hpe logo" width="70%">
       			</div>
       		</div>
           <div class="row justify-content-center products-view icon-is-it-for mt-50 mb-50">
