--- a/_layouts/solutions-overview.html
+++ b/_layouts/solutions-overview.html
@@ -16,7 +16,7 @@
 				</div>
 			</div>
 		</section>
-		<div class="justify-content-center">
+		<div class="justify-content-center minimum-height:1000px">
       {% for post in site.solutions %}
         {% if post.product == page.product %}
           {% if post.class == 'usecase' %}
