--- a/sass/theme/_solutions-overview.scss
+++ b/sass/theme/_solutions-overview.scss
@@ -16,19 +16,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: transparentize(black, 0.5) !important;
+//    background-color: transparentize(beige, 0.9) !important;
     padding: 20px;
 	}
   h2 {
-    padding: 20px;
+    padding: 20px 0px;
     color: white !important;
   }
   a {
     color: white !important;
     font-weight: bold;
-  }
-  &.solution-nuvlacity-satellite {
-  	background-image: url(/img/content/connected_world.jpg);
   }
   &.solution-nuvlacity-security {
   	background-image: url(/img/content/Security_padlocks.jpg);
@@ -41,6 +38,12 @@
   }
   &.solution-nuvlaoutpost-education {
   	background-image: url(/img/content/digital_divide.jpg);
+//    .content {
+//      background-color: transparentize(black, 0.7) !important;
+//    }
+  }
+  &.solution-nuvlaoutpost-satellite {
+  	background-image: url(/img/content/connected_world.jpg);
   }
   &.solution-nuvlascience-hnscicloud {
   	background-image: url(/img/content/europe_people.jpg);
