--- a/_includes/secondary-footer.html
+++ b/_includes/secondary-footer.html
@@ -4,7 +4,7 @@
 			<div class="row footer-content">
 					<div class="col-md-4">
 							<p class="copyright copy-left-text text-white">Copyright © 2018 SixSq Sàrl. All rights reserved. SixSq, SlipStream, NuvlaBox are registered trademarks of SixSq Sàrl in Switzerland and other countries.</p>
-							<p class="copyright copy-left-text text-white">Volumlight is a registered trademarks of Schréder Swiss in Switzerland and other countries.</p>
+							<p class="copyright copy-left-text text-white">Volumlight is a registered trademark of Schréder Swiss in Switzerland and other countries.</p>
 						</div>
 					<div class="col-md-4 text-center">
 						<ul class="footer-social color-2 mb-20">
