--- a/_includes/header-inner.html
+++ b/_includes/header-inner.html
@@ -12,7 +12,7 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink-product" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products & Services</a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink-products">
-                  <a class="dropdown-item" href="/products-and-services/nuvlabox/overview"><b>NuvlaBox</b>: Smart Cloud and Edge Computing Appliance</a>
+                  <a class="dropdown-item" href="/products-and-services/nuvlabox/overview"><b>NuvlaBox</b>: Smart Edge Computing Appliance</a>
                   <a class="dropdown-item" href="/products-and-services/nuvla/overview"><b>Nuvla</b>: Smart Cloud Brokerage</a>
                   <a class="dropdown-item" href="/products-and-services/slipstream/overview"><b>SlipStream</b>: Smart cloud application management</a>
                 </div>
