--- a/css/main.css
+++ b/css/main.css
@@ -845,14 +845,14 @@ td, th {
       background-color: rgba(0, 0, 0, 0.5) !important; }
     .banner-page-int.banner-nuvla h2 {
       background-color: rgba(0, 0, 0, 0.5) !important; }
-  .banner-page-int.banner-slipstream {
+  .banner-page-int.banner-slipstream, .banner-page-int.banner-developer {
     background: url(/img/banner/slipstream.png) no-repeat bottom center/cover; }
     @media (max-width: 767px) {
-      .banner-page-int.banner-slipstream {
+      .banner-page-int.banner-slipstream, .banner-page-int.banner-developer {
         background: url(/img/banner/slipstream.png) no-repeat; } }
-    .banner-page-int.banner-slipstream p {
+    .banner-page-int.banner-slipstream p, .banner-page-int.banner-developer p {
       background-color: rgba(0, 0, 0, 0.5) !important; }
-    .banner-page-int.banner-slipstream h2 {
+    .banner-page-int.banner-slipstream h2, .banner-page-int.banner-developer h2 {
       background-color: rgba(0, 0, 0, 0.5) !important; }
   .banner-page-int.banner-about {
     background: url(/img/banner/about.png) no-repeat bottom center/cover; }
