--- a/sass/theme/_banner.scss
+++ b/sass/theme/_banner.scss
@@ -69,9 +69,9 @@
 		}
 	}
 	&.banner-nuvla {
-		background: url(/img/content/edge-business.jpg) no-repeat bottom center/cover;
+		background: url(/img/banner/nuvla.png) no-repeat bottom center/cover;
 		@include mobile {
-		 	background: url(/img/content/edge-business.jpg) no-repeat;
+		 	background: url(/img/banner/nuvla.png) no-repeat;
 		}
     p {
       background-color: transparentize(black, 0.5) !important;
