--- a/sass/theme/_solutions-overview.scss
+++ b/sass/theme/_solutions-overview.scss
@@ -28,7 +28,7 @@
     font-weight: bold;
   }
   &.solution-nuvlacity-security {
-  	background-image: url(/img/content/Security_padlocks.jpg);
+  	background-image: url(/img/content/Security_padlocks.png);
   }
   &.solution-nuvlacity-industrialised {
   	background-image: url(/img/content/robot.png);
@@ -40,10 +40,10 @@
     }
   }
   &.solution-nuvlacity-volumlight {
-  	background-image: url(/img/content/volumlight.jpg);
+  	background-image: url(/img/content/volumlight.png);
   }
   &.solution-nuvlacity-perfect {
-  	background-image: url(/img/content/dart2.jpg);
+  	background-image: url(/img/content/perfect.png);
   }
   &.solution-nuvlaoutpost-remote-communities {
   	background-image: url(/img/content/rural_tech.jpg);
