--- a/sass/theme/_section-services.scss
+++ b/sass/theme/_section-services.scss
@@ -65,7 +65,7 @@
   	}
   }
   .services-smart-securing {
-  	background: url(../img/section-services/smart-securing.png) no-repeat;
+  	background: url(/img/section-services/smart-securing.png) no-repeat;
   	background-repeat: no-repeat;
   	background-size: 100% auto;
   	background-position: center top;
@@ -138,7 +138,7 @@
   	}
   }
 	.services-satellite {
-		background: url(../img/section-services/section-satellite.png) no-repeat;
+		background: url(/img/section-services/section-satellite.png) no-repeat;
 		background-repeat: no-repeat;
 		background-size: 100% auto;
 		background-position: center top;
@@ -215,7 +215,7 @@
 		}
 	}
 	.services-eosc {
-		background: url(../img/section-services/section-eosc.png) no-repeat;
+		background: url(/img/section-services/section-eosc.png) no-repeat;
 		background-repeat: no-repeat;
 		background-size: 100% auto;
 		background-position: center top;
