--- a/sass/theme/_solutions-overview.scss
+++ b/sass/theme/_solutions-overview.scss
@@ -46,21 +46,21 @@
   	background-image: url(/img/content/perfect.png);
   }
   &.solution-nuvlaoutpost-remote-communities {
-  	background-image: url(/img/content/rural_tech.jpg);
+  	background-image: url(/img/content/rural_tech.png);
   }
   &.solution-nuvlaoutpost-education {
-  	background-image: url(/img/content/digital_divide.jpg);
+  	background-image: url(/img/content/digital_divide.png);
   }
   &.solution-nuvlaoutpost-satellite {
-  	background-image: url(/img/content/connected_world.jpg);
+  	background-image: url(/img/content/connected_world.png);
   }
   &.solution-nuvlascience-hnscicloud {
-  	background-image: url(/img/content/europe_people.jpg);
+  	background-image: url(/img/content/europe_people.png);
     .content {
       background-color: transparentize(black, 0.6) !important;
     }
   }
   &.solution-nuvlascience-gnss {
-  	background-image: url(/img/content/gnss.jpg);
+  	background-image: url(/img/content/gnss.png);
   }
 }
