--- a/_layouts/nuvlabox-spec.html
+++ b/_layouts/nuvlabox-spec.html
@@ -64,9 +64,9 @@
             <h4 style="line-height: 1.5em">{{ page.content }}</h4>
           </div>
           <div class="col-md-12 mb-50 text-center">
-            <img style="max-height: 280px;" src="/img/content/product_descriptions/nuvlabox_product_description_screen_shot.png" alt="nuvlabox_product_description"/>
+            <img style="max-height: 280px;" src="/img/content/product_descriptions/nuvlabox_product_description.png" alt="nuvlabox_product_description"/>
 						<p class="button mt-10 text-center">
-							<a class="btn-sixsq mt-20 color-3 text-center" href="http://media.sixsq.com/nuvlabox-product-description"><i class="far fa-plus-square"></i> Read more</a>
+							<a class="btn-sixsq mt-20 color-3 text-center" href="https://media.sixsq.com/hubfs/Marketing%20Materials/Product_Descriptions/Product_Descriptions-NuvlaBox-2018.pdf"><i class="far fa-plus-square"></i> Read more</a>
 						</p>
           </div>
         </div>
