--- a/_layouts/slipstream-spec.html
+++ b/_layouts/slipstream-spec.html
@@ -10,7 +10,7 @@
       	<div class="container">
       			<div class="col-md-12 mt-20 section-title text-center">
       				<h2 class="pb-10 fw700">Standing on the shoulders of giants</h2>
-              <h4 class="mt-20 ml-20 mr-50">SlipStream builds on the important work of other open source projects. Here are the key technologies, tools and libraries we use to build SlipStream. This ensures a scalable, easy to test and operate software, as well as simple to extend and evolve.</h4>
+              <h4 class="mt-20 ml-20 mr-50">SlipStream builds on the important work of other open source projects. Here are the key technologies, tools and libraries we use to build SlipStream. This ensures a software which is scalable, easy to test and operate, as well as simple to extend and evolve.</h4>
               <div class="row justify-content-center icon-is-it-for pb-50 pt-50">
                 {% for post in site.products-and-services %}
                   {% if post.class == 'tech' %}
@@ -33,13 +33,13 @@
       				<h2 class="pb-10 fw700">Read the technical specification</h2>
       			</div>
       		</div>
-          <div id="nuvlabox-product-description" class="col-md-12 text-center">
-            <p>XXX NuvlaBox is smart cloud-in-a-box appliance which offers easy and affordable access to cloud computing. It comes in two versions, standard and mini, both of which and can be customised with your own branding. The operating system is CentOS, OpenNebula provides the cloud layer and SlipStream is the PaaS. If you want to read more about the software and hardware specifications, take a look at the product description.  </p>
+          <div id="slipstream-product-description" class="col-md-12 text-center">
+            <p>If you want to know more about SlipStream, take a look at the product description.  </p>
           </div>
           <div class="col-md-12 mb-50 text-center">
-            <img style="max-height: 280px;" src="/img/content/product_descriptions/nuvla_product_description_screen_shot.png" alt="nuvla_product_description"/>
+            <img style="max-height: 280px;" src="/img/content/product_descriptions/slipstream_product_description_screen_shot.png" alt="slipstream_product_description"/>
 						<p class="button mt-10 text-center">
-							<a class="btn-sixsq mt-20 color-3 text-center" href="http://media.sixsq.com/nuvla-product-description"><i class="far fa-plus-square"></i> Read more</a>
+							<a class="btn-sixsq mt-20 color-3 text-center" href="https://media.sixsq.com/hubfs/Marketing%20Materials/Product_Descriptions/Product_Descriptions-SlipStream-2018.pdf"><i class="far fa-plus-square"></i> Read more</a>
 						</p>
           </div>
         </div>
