Add cookie notice

--- a/_includes/terms-sub-menu.html
+++ b/_includes/terms-sub-menu.html
@@ -1,6 +1,6 @@
 		<!-- Start menu-product -->	
 		<section class="menu-product menu-product-{{ page.product }} pb-10 pt-20">
-        <nav class="navbar navbar-toggleable-sm navbar-inverse sub-navbar">
+        <nav class="container navbar navbar-toggleable-sm navbar-inverse sub-navbar">
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#subNavbarNavDropdown" aria-controls="subNavbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -20,6 +20,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" id="navbarMenuLink-aai-privacy" href="/terms/aai-privacy">AAI Privacy</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="navbarMenuLink-aai-privacy" href="/terms/cookie-notice">Cookie Notice</a>
               </li>
             </ul>
           </div>
