--- a/_layouts/terms.html
+++ b/_layouts/terms.html
@@ -6,7 +6,9 @@
 	<main>
     {% include {{ page.product }}-banner.html %}
     {% include {{ page.product }}-sub-menu.html %}
-    {{ page.content }}
+		<div class="container">
+      {{ page.content }}
+    </div>
 		<!-- Start what do you get? -->	
 		<section class="section-is-it-for">
 			<div class="container">
