--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,4 +19,26 @@
 	<link rel="stylesheet" href="/css/linearicons.css">
 	<link rel="stylesheet" href="/css/bootstrap.css">
 	<link rel="stylesheet" href="/css/main.css">
+  
+  <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
+  <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
+  <script>
+  window.addEventListener("load", function(){
+  window.cookieconsent.initialise({
+    "palette": {
+      "popup": {
+        "background": "#252e39"
+      },
+      "button": {
+        "background": "#9B1313"
+      }
+    },
+    "position": "bottom",
+    "content": {
+       "message": "This website uses cookies to ensure you get the best experience on our website.",
+       "dismiss": "Got it!",
+       "href": "/terms/cookie-notice"
+    }
+  })});
+  </script>
 </head>
