--- a/sass/theme/_section-article.scss
+++ b/sass/theme/_section-article.scss
@@ -1,8 +1,12 @@
 //-------- Section-About --------//
 .section-article {
   margin-bottom: 100px;
+	h1 {
+    margin-top: 20px;
+    margin-bottom: 20px;
+	}
 	h2 {
-    font-size: 250%;
+    font-size: 175%;
     margin-top: 10px;
     margin-bottom: 20px;
 	}
