--- a/_layouts/videos.html
+++ b/_layouts/videos.html
@@ -31,5 +31,6 @@
     {% include primary-footer.html %}
     </main>
     {% include secondary-footer.html %}
+    <script src="/js/videos.js"></script>
   </body>
 </html>
