--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -107,7 +107,7 @@
   							<div class="widget-section text-center mt-20"><i class="fas fa-circle"></i></div>
               </div>
   						<div class="news-homepage-carousel active-screen-news animated">
-                {% for post in site.news %}
+                {% for post in site.news reversed %}
                   {% if post.in-focus %}
                     {% include welcome-in-focus-item.html %}
                   {% endif %}
@@ -120,7 +120,7 @@
   							<div class="widget-section text-center mt-20"><i class="fas fa-circle"></i></div>
   						</div>
   						<div class="news-homepage-carousel active-screen-news animated">
-                {% for post in site.blog %}
+                {% for post in site.blog reversed %}
                   {% if post.top-story == true %}
                     {% include welcome-blog-item.html %}
                   {% endif %}
