Update privacy policy and terms

--- a/_includes/terms-sub-menu.html
+++ b/_includes/terms-sub-menu.html
@@ -19,7 +19,7 @@
                 <a class="nav-link" id="navbarMenuLink-eula" href="/terms/eula">EULA</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-aai-privacy" href="/terms/aai-privacy">AAI Privacy</a>
+                <a class="nav-link" id="navbarMenuLink-aai-privacy" href="/terms/aai-privacy">Privacy</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" id="navbarMenuLink-aai-privacy" href="/terms/cookie-notice">Cookie Notice</a>
