Add Google analytics

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,16 @@
 	<meta name="keywords" content="{% if page.meta-keywords %}{{ page.meta-keywords }}{% else %}cloud computing, edge computing, Nuvla, NuvlaBox, NuvlaCity, NuvlaScience, NuvlaOutpost, Smart City, Industry 4.0, machine learning, big data, IoT{% endif %}">
 	<meta charset="UTF-8">
 	<title>SixSq | {{ page.title }}</title>
+  <!-- Global Site Tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-6461733-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-6461733-1');
+  </script>
+  <!-- End Google Analytics -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/v4-shims.js"></script>
 
