Update address and telephone number

--- a/_includes/primary-footer.html
+++ b/_includes/primary-footer.html
@@ -6,7 +6,7 @@
 						<h4>Headquarters:</h4>
 						<ul>
 							<li class="fw400">SixSq</li>
-							<li class="fw400">Rue du Bois-du-Lan, 8</li>
+							<li class="fw400">Route de Meyrin 267</li>
 							<li class="fw400">1217, Meyrin, Geneva</li>
 							<li class="fw400">Switzerland</li>
 						</ul>
@@ -22,7 +22,7 @@
 					</div>
 					<div class="col-md-4 contact">
 						<ul>
-							<li class="fw400"><i class="fas fa-mobile fa-phone fa-fw"></i>info/support: +41 22 54 41 733</li>
+							<li class="fw400"><i class="fas fa-mobile fa-phone fa-fw"></i>info/support: +41 22 980 95 80</li>
 							<li class="fw400"><i class="fas fa-envelope fa-fw"></i><a href="mailto:info@sixsq.com">info@sixsq.com</a></li>
 							<li class="fw400"><i class="fas fa-envelope fa-fw"></i><a href="mailto:support@sixsq.com">support@sixsq.com</a></li>
 						</ul>
