Update http to https

--- a/_includes/media-sub-menu.html
+++ b/_includes/media-sub-menu.html
@@ -19,7 +19,7 @@
                 <a class="nav-link" id="navbarMenuLink-videos" href="/media/videos">Videos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-blog" href="http://media.sixsq.com/blog">Blog</a>
+                <a class="nav-link" id="navbarMenuLink-blog" href="https://media.sixsq.com/blog">Blog</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" id="navbarMenuLink-eguides" href="/media/eguides">eGuides</a>
