--- a/_includes/header-inner.html
+++ b/_includes/header-inner.html
@@ -34,7 +34,7 @@
                   <a class="dropdown-item" href="/media/overview">Overview</a>
                   <a class="dropdown-item" href="/media/news">News</a>
                   <a class="dropdown-item" href="/media/videos">Videos</a>
-                  <a class="dropdown-item" href="http://media.sixsq.com/blog">Blog</a>
+                  <a class="dropdown-item" href="https://media.sixsq.com/blog">Blog</a>
                   <a class="dropdown-item" href="/media/eguides">eGuides</a>
                   <a class="dropdown-item" href="/media/solution-briefs">Solution Briefs</a>
                 </div>
