only use discover channel and extend to 8 videos

--- a/_layouts/videos.html
+++ b/_layouts/videos.html
@@ -13,11 +13,11 @@
         <div class="row"></div>
         <a class="btn-sixsq mb-10 color-3 text-center" href="https://www.youtube.com/channel/UCGYw3n7c-QsDtsVH32By1-g"><i class="far fa-plus-square"></i>  Watch on Youtube</a>
       </div>
-      <div id="tutorials" class="container">
+      <!-- <div id="tutorials" class="container">
         <h2>Our Tutorials Channel</h2>
         <div class="row"></div>
         <a class="btn-sixsq mb-50 color-3 text-center" href="https://www.youtube.com/channel/UCGYw3n7c-QsDtsVH32By1-g"><i class="far fa-plus-square"></i>  Watch on Youtube</a>
-      </div>
+      </div> -->
       <div id="col-template" style="display: none;">
         <div class="col-md-6 col-sm-5 col-xs-12 container spacy mb-20">
           <h3>Title...</h3>
