--- a/_includes/secondary-footer.html
+++ b/_includes/secondary-footer.html
@@ -3,7 +3,7 @@
 		<div class="container">
 			<div class="row footer-content">
 					<div class="col-md-4">
-							<p class="copyright copy-left-text text-white">Copyright © 2019 SixSq Sàrl. All rights reserved. SixSq, SlipStream, NuvlaBox are registered trademarks of SixSq Sàrl in Switzerland and other countries.</p>
+							<p class="copyright copy-left-text text-white">Copyright © 2019 SixSq Sàrl. All rights reserved. SixSq, Nuvla, NuvlaBox are registered trademarks of SixSq Sàrl in Switzerland and other countries.</p>
 							<p class="copyright copy-left-text text-white">Volumlight is a registered trademark of Schréder Swiss in Switzerland and other countries.</p>
 						</div>
 					<div class="col-md-4 text-center">
@@ -11,7 +11,6 @@
 							<li><a href="http://www.facebook.com/SixSq-143266939349560/"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="https://twitter.com/sixsq"><i class="fab fa-twitter"></i></a></li>
 							<li><a href="https://www.linkedin.com/company/sixsq"><i class="fab fa-linkedin-in"></i></a></li>
-							<li><a href="https://plus.google.com/+sixsq"><i class="fab fa-google-plus-g"></i></a></li>
 						</ul>
             <p class="text-white">Original web design by <a class="text-white" href="https://www.trust-itservices.com" style="margin: 0 5px">Trust-IT</a></p>
 					</div>
@@ -29,7 +28,7 @@
 				<li><a href="http://www.facebook.com/SixSq-143266939349560/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
 				<li><a href="https://www.linkedin.com/company/sixsq" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
 				<li><a href="mailto:info@sixsq.com"><i class="fas fa-envelope"></i></a></li>
-				<li><a href="http://github.com/SlipStream"><i class="fab fa-github"></i></a></li>
+				<li><a href="http://github.com/nuvla"><i class="fab fa-github"></i></a></li>
 			</ul>
 		</div>
 
