--- a/_includes/about-sub-menu.html
+++ b/_includes/about-sub-menu.html
@@ -4,7 +4,7 @@
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#subNavbarNavDropdown" aria-controls="subNavbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="/about/about-us">
+          <a class="navbar-brand" href="/about/{{ page.class }}">
 						<h2 class="text-white fw600">{{ page.product-name }}.</h2>
           </a>
           <div class="collapse navbar-collapse justify-content-end" id="subNavbarNavDropdown">
