WIP partnership program

--- a/_layouts/partnership-benefits.html
+++ b/_layouts/partnership-benefits.html
@@ -6,16 +6,16 @@
 	<main>
     {% include {{ page.product }}-banner.html %}
     {% include {{ page.product }}-sub-menu.html %}
-    {{ page.content }}
 		<!-- Start what do you get? -->	
 		<section class="mt-20 section-is-it-for">
 			<div class="container">
-				<div class="row justify-content-center pb-50 pt-50">
+				<div class="row justify-content-center pb-10 pt-50">
 					<div class="col-md-12 section-title text-center">
 							<h2 class="pb-10 fw700">Discover the main benefits of our program.</h2>
+              {{ page.content | markdownify }}
 					</div>
 				</div>
-				<div class="row justify-content-center icon-is-it-for pb-50 pt-50">
+				<div class="row justify-content-center icon-is-it-for pb-50 pt-10">
           {% for post in site.aiot-partnership-program %}
             {% if post.class == 'benefit' %}
               {% include highlighted-with-image-item-no-truncation.html %}
