--- a/_layouts/partnership.html
+++ b/_layouts/partnership.html
@@ -6,12 +6,17 @@
 	<main>
     {% include {{ page.product }}-banner.html %}
     {% include {{ page.product }}-sub-menu.html %}
+		<section class="section-article mb-20 mt-20">
+			<div class="container">
+        {{ page.content | markdownify }}
+			</div>
+    </section>
 		<!-- Start what do you get? -->	
 		<section class="bg-white mt-20 section-do-you-get animated">
 			<div class="container">
 				<div class="row justify-content-center pt-50">
 					<div class="col-md-12 section-title text-center">
-						<h2 class="pb-10 fw700">What do you get?</h2>
+						<h2 class="pb-10 fw700">What are the benefits?</h2>
 					</div>
 				</div>
 				<div class="row justify-content-center pb-50 pt-50">
@@ -25,7 +30,7 @@
             {% endfor %}
 					</div>
     			<div class="col-md-12 text-center">
-    			  <a class="btn-sixsq color-dark" href="/partnership/benefits"><i class="far fa-plus-square"></i>  Discover all features</a>
+    			  <a class="btn-sixsq color-dark" href="/partnership/benefits"><i class="far fa-plus-square"></i>  Discover all benefits</a>
           </div>
 				</div>
 			</div>
