WIP partnership program

--- a/_includes/partnership-sub-menu.html
+++ b/_includes/partnership-sub-menu.html
@@ -15,6 +15,9 @@
               <li class="nav-item">
                 <a class="nav-link" id="navbarMenuLink-benefits" href="/partnership/benefits">Benefits</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" id="navbarMenuLink-join" href="/partnership/join">Join</a>
+              </li>
             </ul>
           </div>
         </nav>
