--- a/_layouts/partnership.html
+++ b/_layouts/partnership.html
@@ -15,7 +15,7 @@
 			<div class="container">
 				<div class="row justify-content-center pt-50">
 					<div class="col-md-12 section-title text-center">
-						<h2 class="pb-10 fw700">What are the benefits?</h2>
+						<h2 class="pb-10 fw700">What are the benefits of the program?</h2>
 					</div>
 				</div>
 				<div class="row justify-content-center pb-50 pt-50">
