--- a/_layouts/partnership-benefits.html
+++ b/_layouts/partnership-benefits.html
@@ -25,7 +25,7 @@
 			</div>
 		</section>
 		<!-- Stop what do you get? -->
-    {% include whats-next.html %}
+    {% include whats-next-partners.html %}
 		<!-- End Section News -->	
       {% include primary-footer.html %}
     </main>
