--- a/_includes/header-inner.html
+++ b/_includes/header-inner.html
@@ -45,7 +45,8 @@
                   <a class="dropdown-item" href="/about/about-us">About Us</a>
                   <a class="dropdown-item" href="/about/contact">Contact</a>
                   <a class="dropdown-item" href="/about/customers">Customers</a>
-                  <a class="dropdown-item" href="/partnership/overview">AIoT Partnership</a>
+                  <!-- <a class="dropdown-item" href="/partnership/overview">AIoT Partnership</a> -->
+                  <a class="dropdown-item" href="/about/partners">Partners</a>
                   <a class="dropdown-item" href="/about/r-and-d">R&amp;D</a>
                   <a class="dropdown-item" href="/about/jobs">Jobs</a>
                   <a class="dropdown-item" href="/about/terms">Terms</a>
