--- a/_layouts/partnership-join.html
+++ b/_layouts/partnership-join.html
@@ -28,7 +28,7 @@
 			</div>
 		</section>
 		<!-- End Who is it for? -->	
-    {% include whats-next.html %}
+    {% include whats-next-partners.html %}
     {% include primary-footer.html %}
     </main>
     {% include secondary-footer.html %}
