--- a/_layouts/partnership.html
+++ b/_layouts/partnership.html
@@ -34,7 +34,7 @@
 				</div>
 			</div>
 		</section>
-    {% include whats-next.html %}
+    {% include whats-next-partners.html %}
     {% include primary-footer.html %}
     </main>
     {% include secondary-footer.html %}
