--- a/_includes/whats-next-partners.html
+++ b/_includes/whats-next-partners.html
@@ -4,7 +4,7 @@
 				<div class="container">
 					<div class="content-text text-center text-white pb-50 pt-80">
 						<h2 class="text-white fw700">What’s next?</h2>
-						<h3 class="text-white fw600">Interested and want to join our AIoT partnership program?</h3>
+						<h3 class="text-white fw600">Interested and want to join our AIoT partnership programme?</h3>
 						<p class="text-white fw300 mt-10">Simply apply and we'll get in touch.</p>
 						<p><a class="text-white btn-sixsq mt-20 text-center" href="/partnership/join"><i class="far fa-plus-square"></i>  Join now</a></p>
 					</div>
