--- a/_includes/partnership-sub-menu.html
+++ b/_includes/partnership-sub-menu.html
@@ -5,7 +5,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <a class="navbar-brand" href="/partnership/overview">
-						<h2 class="text-white fw600">AIoT Partnership Program.</h2>
+						<h2 class="text-white fw600">AIoT Partnership Programme.</h2>
           </a>
           <div class="collapse navbar-collapse justify-content-end" id="subNavbarNavDropdown">
             <ul class="navbar-nav">
