--- a/_layouts/partnership-benefits.html
+++ b/_layouts/partnership-benefits.html
@@ -11,7 +11,7 @@
 			<div class="container">
 				<div class="row justify-content-center pb-10 pt-50">
 					<div class="col-md-12 section-title text-center">
-							<h2 class="pb-10 fw700">Discover the main benefits of our program.</h2>
+							<h2 class="pb-10 fw700">Discover the main benefits of our programme.</h2>
               {{ page.content | markdownify }}
 					</div>
 				</div>
